[tool.poetry]
name = "nonebot_plugin_manager"
version = "0.5.12"
description = "Nonebot Plugin Manager base on import hook"
authors = ["Jigsaw <j1g5aw@foxmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Jigsaw111/nonebot_plugin_manager"
repository = "https://github.com/Jigsaw111/nonebot_plugin_manager"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0-rc.1"
nonebot-adapter-onebot = "^2.0.0-rc.1"
httpx = ">=0.23.1, <1.0.0"

[tool.poetry.dev-dependencies]
nb-cli = "^0.6.0"
black = {version = "^21.9b0", allow-prereleases = true}

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
src_paths = ["nonebot", "tests"]
extra_standard_library = ["typing_extensions"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
