[project]
authors = [{ name = "Jigsaw", email = "j1g5awi@proton.me" }]
requires-python = ">=3.9,<4.0"
dependencies = [
    "nonebot2<3.0.0.0,>=2.0.0",
    "nonebot-plugin-alconna>=0.51.1",
    "nonebot-plugin-session>=0.3.2",
    "nonebot-plugin-localstore>=0.7.1",
]
name = "nonebot-plugin-manager"
version = "0.1.0"
description = "Premium Nonebot Plugin Manager base on import hook"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/nonepkg/plugin-manager"
repository = "https://github.com/nonepkg/plugin-manager"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
pre-commit = ["ruff", "isort", "black", "nonemoji", "pre-commit"]
nonebot = [
    "uvicorn[standard]>=0.12.0,<1.0.0",
    "aiohttp>=3.10.2",
    "fastapi>=0.112.0",
    "nonebot-plugin-orm[default]>=0.7.5",
    "nonebot-adapter-onebot>=2.4.4",
]
tests = [
    "nonebug>=0.3.1",
    "pytest-asyncio>=0.20.3",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.2.0",
    "pytest-mock>=3.14.0",
    "freezegun>=1.5.1",
]
impl = ["nonebot-plugin-sentry>=0.2.2"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "W",     # pycodestyle warnings
    "E",     # pycodestyle errors
    "UP",    # pyupgrade
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    "T10",   # flake8-debugger
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E402",   # module-import-not-at-top-of-file
    "UP037",  # quoted-annotation
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
    "PYI051",
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.pyright]
typeCheckingMode = "basic"
reportShadowedImports = false
pythonVersion = "3.9"
pythonPlatform = "All"
executionEnvironments = [
    { root = "./tests", extraPaths = [
        "./",
    ] },
    { root = "./" },
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.nonebot]
plugins = ['nonebot.plugins.echo', "nonebot_plugin_manager"]
adapters = [
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" },
]
